change background color and color

--- a/public/style.css
+++ b/public/style.css
@@ -20,8 +20,8 @@ body {
   font-size: 16px;
   line-height: 1.5;
   font-weight: 300;
-  background-color: #0d0d2b;
-  color: #000;
+  background-color: #f9fbe7;
+  color: #8dc1b8;
   overflow-x: hidden;
 }
 
