--- a/public/style.css
+++ b/public/style.css
@@ -21,7 +21,7 @@ body {
   line-height: 1.5;
   font-weight: 300;
   background-color: #f9fbe7;
-  color: #8dc1b8;
+  color: #b2b2b2;
   overflow-x: hidden;
 }
 
