--- a/public/style.css
+++ b/public/style.css
@@ -38,3 +38,32 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+
+@media only screen and (max-width: 900px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 770px) {
+  html {
+    font-size: 12px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  html {
+    font-size: 10px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .transliterator {
+    flex-direction: column;
+  }
+
+  .transliterator__text,
+  .transliterator__result {
+    margin: 1rem;
+  }
+}
